cmake_minimum_required(VERSION 3.22)
project(DataStructurePractice)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructurePractice main.cpp)

add_executable(P1 Day2/p1_e.cpp)
add_executable(p1_h Day2/p1_h.cpp)
add_executable(p2_e Day2/p2_e.cpp)
add_executable(p2_h Day2/p2_h.cpp)
add_executable(test Day2/test.cpp)