cmake_minimum_required(VERSION 3.22)
project(DataStructurePractice)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructurePractice main.cpp)

add_executable(day2_p1_e Day2/day2_p1_e.cpp)
add_executable(day2_p1_h Day2/day2_p1_h.cpp)
add_executable(day2_p2_e Day2/day2_p2_e.cpp)
add_executable(day2_p2_h Day2/day2_p2_h.cpp)
add_executable(day3_p1_e Day3/day3_p1_e.cpp)
add_executable(day3_p1_h Day3/day3_p1_h.cpp)
add_executable(day3_p2 Day3/day3_p2.cpp)
add_executable(day4_p1_e Day4/day4_p1_e.cpp)
add_executable(day4_p1_h Day4/day4_p1_h.cpp)
add_executable(day4_p2 Day4/day4_p2.cpp)
add_executable(day4_pp2 Day4Practice/day4_pp2.cpp)